<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_uploadAttachments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_uploadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upload_file"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_selectAttachment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/upload"
            android:gravity="start"
            android:hint="@string/select_attachment"
            android:padding="12dp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_uploadFile"
            app:layout_constraintTop_toBottomOf="@+id/tv_uploadFile" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_imageAttached"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:background="@color/bg_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_selectAttachment">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_previewImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bg_file"
                android:drawableStart="@drawable/gallery"
                android:drawableEnd="@drawable/preview"
                android:drawablePadding="10dp"
                android:text="@string/photo_jpeg"
                android:textColor="@color/txt_branch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_deleteImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_deleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:src="@drawable/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_videoAttached"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:background="@color/bg_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_imageAttached">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_previewVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bg_file"
                android:drawableStart="@drawable/video"
                android:drawableEnd="@drawable/preview"
                android:drawablePadding="10dp"
                android:text="@string/video_mp4"
                android:textColor="@color/txt_branch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_deleteVideo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_deleteVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:src="@drawable/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_recordAttached"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:background="@color/bg_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_videoAttached">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_previewRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bg_file"
                android:drawableStart="@drawable/record"
                android:drawableEnd="@drawable/preview"
                android:drawablePadding="10dp"
                android:text="@string/audio_mp3"
                android:textColor="@color/txt_branch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_deleteRecord"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_deleteRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:src="@drawable/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:id="@+id/compressionProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compressionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compressing_video"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/compressionProgress"
            app:layout_constraintStart_toStartOf="@id/compressionProgress"
            app:layout_constraintTop_toBottomOf="@id/compressionProgress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>